# src/routes/auth.routes.ts
@@ -1,9 +1,10 @@
-import { Router } from 'express'
-import { register, login } from '../controllers/auth.controller'
+import { Router } from "express";
+import { register, login, refreshToken } from "../controllers/auth.controller";
 
-const router = Router()
+const router = Router();
 
-router.post('/register', register)
-router.post('/login', login)
+router.post("/register", register);
+router.post("/login", login);
+router.post("/refresh-token", refreshToken);
 
-export default router
+export default router;
